# wordle

./: Cargo.toml
src/: api.rs  keyboard.rs  main.rs
